# nightcore-worker

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.txt  README.md  README_NOTICE.txt  ROADMAP.md  baseline.json  config.json  connection_test.txt  device.id.example  firecracker_config.json  gpg_fix_test.txt  license_unlock.key.example  manifest.json  math.rs  module.sig  module.wasm  nightcore_sign_test.txt  pubkey.b64  release_body.md  sign_upgrade.rs  upgrade_manifest.json
.cargo/: config.toml
configs/: policy.default.toml
crates/nc-exec/: Cargo.toml
crates/nc-exec-cli/: Cargo.toml
crates/nc-exec-cli/src/: main.rs
crates/nc-exec-firecracker/: Cargo.toml
crates/nc-exec-firecracker/src/: lib.rs
crates/nc-exec-wasmtime/: Cargo.toml
crates/nc-exec-wasmtime/src/: lib.rs
crates/nc-exec/src/: lib.rs
crates/nc_state/: Cargo.toml
crates/nc_state/src/: lib.rs
docs/: HOW_TO_GUIDE.md  HOW_TO_USE_FIRECRACKER.md  Hooks_Setup.md  NOTICE.html  README.md  STATUS_v37.md  aufs-overview.md  guardian.md  nightcore_overview.txt  nightmesh.md  release_notes_v37.md  release_notes_v38.md  vesper.md
docs/internal/: RELEASE_POLICY.md
docs/legacy/: NightCore_Chronicle.md  Night_Core_Chronicle.md
docs/proof/: README.md
docs/provenance/: nightcore_v38_provenance.html
docs/releases/: v38.html
docs/security/: AUFS_VERIFICATION.md  GOVERNANCE.md  THREATMODEL.md  THREAT_MODEL.md
examples/: derive_pub.rs
foundation/: README.md  baseline.json
hello_wasm/: Cargo.toml
hello_wasm/src/: lib.rs  main.rs
keys/maintainers/: admin1.key  admin1.pub  admin2.key  admin2.pub
logs/: nightcore_dashboard.html  nightcore_docs.html  nightcore_history_dashboard.html  nightcore_proof.html  orchestration_report.json  tenantA-hello_proof_history.json
logs/tenantA-hello/: proof_dashboard.html  proof_report.jsonl
logs/tenantB-math/: proof_dashboard.html  proof_report.jsonl
modules/tenantA-hello/: cargo.toml  manifest.json  manifest.json.tmp  manifest.rs  module.sha256  module.sig  module.wasm  module.wat  pubkey.b64  tenantA-hello.key
modules/tenantA-hello/backup/: pubkey_old.b64
modules/tenantA-hello/maintainers/: admin1.key  admin1.pub  admin2.key  admin2.pub
modules/tenantA-hello/src/: main.rs
modules/tenantB-math/: Cargo.toml  manifest.json  module.sha256  module.sig  module.wasm  module.wat  pubkey.b64  tenantB-math.key
modules/tenantB-math/backup/: pubkey.b64
modules/tenantB-math/maintainers/: admin1.pub  admin2.key  admin2.pub
modules/tenantB-math/src/: main.rs
ops/: cold-storage.md
sandbox/: msg.txt
scripts/: chain_audit.ps1  generate_release_html.ps1  nightcore_manual_proof_push.ps1  nightcore_safe_run_signed.ps1  nightcore_sync_docs.ps1  sign_upgrade.rs  sync_chronicle.ps1  test_signature.ps1  verify_chain.ps1
scripts/docs/internal/: NightCore_Progress_Report_2025-11-07.md  RELEASE_POLICY.md
scripts/keys/maintainers/: admin1.key  admin1.pub  admin2.key  admin2.pub
src/: audit.rs  aufs.rs  firecracker_adapter.rs  generate_keys.rs  generate_maintainers.rs  key_sync.rs  keyseal.rs  main.rs  sign.rs  sign_upgrade.rs  unlock.rs  upgrade.rs  verify.rs  verify_backup_unclosed_20251031_144036.rs
src/aufs/: aufs_verify.rs  verify_upgrade.rs
tools/: Cargo.toml
tools/src/: main.rs
upgrades/manifests/: upgrade_manifest.json  v38.json
upgrades/signatures/: v251029_admin2.sig.b64  v251031_admin1.sig.b64  v38.admin1.sig  v38.admin2.sig  v38_admin1.sig  v38_admin2.sig  v38_admin2.sig.b64
upgrades/signatures/maintainers/: admin1.pub  admin2.key  admin2.pub
~/.git-hooks/: pre-commit
