[package]
name = "nightcore"
version = "0.1.0"
edition = "2021"
authors = ["B106 Labs"]
license = "MIT"
description = "Night Core — Secure multi-tenant WebAssembly orchestration framework (B106 Edition)"
readme = "README.md"
repository = "https://github.com/<your-username>/nightcore"
keywords = ["wasm", "wasmtime", "wasi", "security", "aufs"]
categories = ["virtualization", "webassembly", "orchestration"]

[features]
audit = []

[dependencies]
# Core utility
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }

# Crypto — v2 to match SigningKey/VerifyingKey usage
ed25519-dalek = "2"

# Async runtime & open
tokio = { version = "1", features = ["rt", "macros", "time", "fs"] }
open = "5"

# Wasmtime 37 + WASI P1
wasmtime = "37.0.0"
wasmtime-wasi = "37.0.0"
wasi-cap-std-sync = "17.0.3"

[dev-dependencies]
rand = "0.8"
bincode = "1.3"
