[package]
name = "nc-exec-firecracker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Night Core — Firecracker microVM backend adapter"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt", "macros", "time", "fs"] }
tempfile = "3"
which = "6"
nc-exec = { path = "../nc-exec" }
